<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="97dp"
            android:layout_marginStart="45dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/muller_bold"
                android:text="@string/text_hello"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="49dp"
                android:fontFamily="@font/sfns_display_bold"
                android:text="@string/text_login_title"
                android:textColor="@color/text_grey"
                android:textSize="19sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/person_selected_drawable"
                android:drawablePadding="13dp"
                android:ems="20"
                android:hint="@string/nickname"
                android:inputType="text"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/password_selected_drawable"
                android:drawablePadding="13dp"
                android:ems="20"
                android:hint="@string/password"
                android:inputType="textEmailAddress"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:elevation="10dp"
                android:fontFamily="@font/sfns_display_bold"
                android:gravity="center"
                android:text="@string/text_login"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="65dp"
                android:fontFamily="@font/muller_bold"
                android:gravity="center"
                android:text="@string/no_account"
                android:textColor="@color/text_grey"
                android:textSize="16sp"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="152dp"
                android:layout_marginTop="4dp"
                android:background="@color/non_background"
                android:fontFamily="@font/muller_bold"
                android:gravity="center"
                android:text="@string/create"
                android:textColor="@color/button_color"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/logo" />

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>