<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:layout_marginStart="45dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/muller_bold"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="30sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/person_selected_drawable"
                android:drawablePadding="13dp"
                android:ems="20"
                android:hint="@string/nickname"
                android:inputType="text"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/email_selected_drawable"
                android:drawablePadding="13dp"
                android:ems="20"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="160dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/password_selected_drawable"
                android:drawablePadding="13dp"
                android:ems="20"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPasswordRepeat"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="240dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/password_selected_drawable"
                android:drawablePadding="13dp"
                android:ems="20"
                android:hint="@string/password_repeat"
                android:inputType="textPassword"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/regButton"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:elevation="10dp"
                android:fontFamily="@font/sfns_display_bold"
                android:gravity="center"
                android:text="@string/text_registration"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="57dp"
                android:fontFamily="@font/muller_bold"
                android:gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="@color/text_grey"
                android:textSize="16sp"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/backLoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="145dp"
                android:layout_marginTop="4dp"
                android:background="@color/non_background"
                android:fontFamily="@font/muller_bold"
                android:gravity="center"
                android:text="@string/text_login"
                android:textColor="@color/button_color"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="0dp"
            android:src="@drawable/logo" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>